Increased linked in icon size and changed color

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -44,7 +44,9 @@
           <figure class="img-container text-lg-left text-center my-0">
             <img src="{{this.aboutProfile}}" class="profile-image img-fluid" alt="{{this.fullName}}'s Profile Image" loading="lazy" />
             <figcaption class="socials">
-              <a href="{{this.linkedin}}" rel="noopener" target="_blank" title="Click to view {{this.firstName}}'s LinkedIn profile"><i class="icon fab fa-linkedin"></i></a>
+              <a href="{{this.linkedin}}" rel="noopener" target="_blank" title="Click to view {{this.firstName}}'s LinkedIn profile">
+                <i class="icon fab fa-linkedin"></i>
+              </a>
             </figcaption>
           </figure>
         </div>
