--- a/public/css/about.css
+++ b/public/css/about.css
@@ -17,7 +17,7 @@
   margin-top: 10px;
 }
 
-.our-people .socials .icon {
+.socials .icon {
   font-size: 20px;
   color: #0276b6; /* linked in offcial brand logo colour */
 }
