--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,19 @@
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
+  <!-- Open Graph / Social Media Image Thumbnail for Web Scraping -->
+  <!-- Linkedin -->
+  <meta property='og:title' content='Dreamlink Studio'/>
+  <meta property='og:image' content='//dreamlinkstudio.com/images/social-thumbnail.png'/>
+  <meta property='og:description' content='Description that will show in the preview'/>
+  <meta property='og:url' content='//dreamlinkstudio.com'/>
+
+  <!-- Facebook -->
+  <meta property="og:url" content="https://dreamlinkstudio.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Welcome to Dreamlink Studio, an application and software development team" />
+  <meta property="og:description" content="Dreamlink Studio create various applications for the web, mobiles and more. They focus on both software as a service applications as well as game based applications" />
+  <meta property="og:image" content="https://dreamlinkstudio.com/images/social-thumbnail.png" /
 
   {{# if title }}
     <title>Dreamlink Studio - {{title}}</title>
