refactored meta tags

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,13 +23,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Open Graph / Social Media Image Thumbnail for Web Scraping -->
-  <!-- Linkedin -->
-  <meta property='og:title' content='Dreamlink Studio'/>
-  <meta property='og:image' content='//dreamlinkstudio.com/images/social-thumbnail.png'/>
-  <meta property='og:description' content='Description that will show in the preview'/>
-  <meta property='og:url' content='//dreamlinkstudio.com'/>
-
-  <!-- Facebook -->
+  <!-- Facebook + Linkedin + others -->
   <meta property="og:url" content="https://dreamlinkstudio.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Welcome to Dreamlink Studio, an application and software development team" />
