Fixed typo on meta tag - caused title issue

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,7 +28,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Welcome to Dreamlink Studio, an application and software development team" />
   <meta property="og:description" content="Dreamlink Studio create various applications for the web, mobiles and more. They focus on both software as a service applications as well as game based applications" />
-  <meta property="og:image" content="https://dreamlinkstudio.com/images/social-thumbnail.png" /
+  <meta property="og:image" content="https://dreamlinkstudio.com/images/social-thumbnail.png" />
 
   {{# if title }}
     <title>Dreamlink Studio - {{title}}</title>
